# Assembly-Compiler-Course-Project

./: Assembler.c  AuxFunc.c  AuxiliaryFunctions .c  CMakeLists.txt  DataListHandler.c  DataTypes.c  ErrorPrinter.c  ExtListHandler.c  FIrstPassDataCoding.c  FirstPass.c  FirstPassCmdCoding.c  FirstPassExternCoding.c  FirstPassStringCoding.c  InputOutputHandler.c  InstructionsListHandler.c  KeyWords.c  LICENSE  LineAnalysis.c  LineListHandler.c  ParametersListHandler.c  README.md  SecondPass.c  SecondPassCmdCoding.c  SecondPassParametersCoding.c  SecondPassRegisterCoding.c  SecondPassSpecialActionCoding.c  SymbolTableHandler.c  assembler  data.h  declarationsHeader.h  makefile
InputFiles/: debug1.txt  debug10.txt  debug11.txt  debug12.txt  debug13.txt  debug14.txt  debug15.txt  debug16.txt  debug17.txt  debug18.txt  debug19.txt  debug20.txt  debug21.txt  debug22.txt  debug23.txt  debug24.txt  debug25.txt  debug4.txt  debug5.txt  debug6.txt  debug7.txt  debug9.txt
OutPutFiles/: debug1.ent  debug1.ob  debug17.ent  debug17.ob  debug19.ob  debug20.ent  debug20.ext  debug20.ob  debug21.ob  debug22.ext  debug22.ob  debug25.ext  debug25.ob  debug4.ent  debug4.ext  debug4.ob  debug5.ob  debug6.ent  debug6.ext  debug6.ob  debug7.ent  debug7.ext  debug7.ob
